feat(auth): fix register
